force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/Apttus_Config2__PriceRuleset__c.object-meta.xml
<CustomObject>
    <description>Represents a rule set that contains the a list of rules to modify prices of products the organization sells.</description>
    <label>Price Ruleset</label>
    <nameField>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>