force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__AdjustmentAppliesTo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentAppliesTo__c</fullName>
    <description>Indicates the price field the adjustment should be applied to. Not applicable to price override adjustments. This field is deprecated. The Adjustment applies to is moved to the Price Rule.</description>
    <label>Adjustment Applies To (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base Price</fullName>
                <default>true</default>
                <label>Base Price</label>
            </value>
            <value>
                <fullName>List Price</fullName>
            </value>
            <value>
                <fullName>Base Extended Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>