force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__ApplicationMethod__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ApplicationMethod__c</fullName>
    <description>The ruleset application method. Only applicable to aggregate price rules.</description>
    <label>Application Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus_Config2__UseType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Apply to Line Items</fullName>
            </value>
            <value>
                <fullName>Create Summary Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>