force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__Category__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Category__c</fullName>
    <description>The category associated with the ruleset.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>