force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__EnableDateRange__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableDateRange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether date range is enabled for the rule or benefit entries</description>
    <inlineHelpText>Indicates whether date range is enabled for the rule or benefit entries</inlineHelpText>
    <label>Enable Date Range</label>
    <type>Checkbox</type>
</CustomField>