force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__EndPricePointId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EndPricePointId__c</fullName>
    <description>Record Id of the ending Price Point for this Waterfall</description>
    <inlineHelpText>Record Id of the ending Price Point for this Waterfall</inlineHelpText>
    <label>End Price Point Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>