force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__ExclusionCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExclusionCriteria__c</fullName>
    <description>The ruleset exclusion criteria specification</description>
    <inlineHelpText>The ruleset exclusion criteria specification</inlineHelpText>
    <label>Ruleset Exclusion Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>