force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__ExpandByDefault__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpandByDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used by the adjustment group on the price waterfall chart to specify if the grouped adjustments should be shown expanded by default.</description>
    <inlineHelpText>This flag is used by the adjustment group on the price waterfall chart to specify if the grouped adjustments should be shown expanded by default.</inlineHelpText>
    <label>Expand By Default</label>
    <type>Checkbox</type>
</CustomField>