force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__HasCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HasCriteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the ruleset has criteria associated with it</description>
    <inlineHelpText>Indicates whether the ruleset has criteria associated with it</inlineHelpText>
    <label>Has Ruleset Criteria</label>
    <type>Checkbox</type>
</CustomField>