force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__IncentiveId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncentiveId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the incentive associated with the ruleset. Only applicable for incentives.</description>
    <inlineHelpText>ID of the incentive associated with the ruleset. Only applicable for incentives.</inlineHelpText>
    <label>Incentive</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Price Rulesets</relationshipLabel>
    <relationshipName>PriceRulesets</relationshipName>
    <type>Lookup</type>
</CustomField>