force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__ParentPricePipelineId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentPricePipelineId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Price Pipeline to which this Price Waterfall belongs to</description>
    <inlineHelpText>Lookup to the Price Pipeline to which this Price Waterfall belongs to</inlineHelpText>
    <label>Parent Price Pipeline Id</label>
    <referenceTo>Apttus_Config2__PriceRuleset__c</referenceTo>
    <relationshipLabel>Price Waterfalls</relationshipLabel>
    <relationshipName>PriceWaterfalls</relationshipName>
    <type>Lookup</type>
</CustomField>