force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__ProductGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product group associated with the ruleset</description>
    <label>Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Price Rulesets</relationshipLabel>
    <relationshipName>PriceRulesets</relationshipName>
    <type>Lookup</type>
</CustomField>