force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__StartPricePointId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StartPricePointId__c</fullName>
    <description>Record Id of the starting Price Point for this Price Waterfall</description>
    <inlineHelpText>Record Id of the starting Price Point for this Price Waterfall</inlineHelpText>
    <label>Start Price Point Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>