force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Type__c</fullName>
    <description>The rule set type</description>
    <inlineHelpText>The rule set type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Price Pipeline</fullName>
            </value>
            <value>
                <fullName>Price Waterfall</fullName>
            </value>
            <value>
                <fullName>Price Pipeline Ruleset</fullName>
            </value>
            <value>
                <fullName>Waterfall Adjustment Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>