force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__UseType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UseType__c</fullName>
    <description>The rule set use type</description>
    <label>Application Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Line Item</fullName>
                <default>true</default>
                <label>Line Item</label>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Aggregate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>